--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.soullan</groupId>
-    <artifactId>gao-oj-be</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>gao-oj-be</name>
-    <description>Demo project for Spring Boot</description>
+    <artifactId>fake-oj-be</artifactId>
+    <version>0.0.3-SNAPSHOT</version>
+    <name>fake-oj-be</name>
+    <description>Fake OJ be by Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -152,6 +152,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
             </plugin>
         </plugins>
     </build>
