--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,12 +4,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&useUnicode=true&characterEncoding=utf-8
     username: root
     password: Lan541686
 
   jackson:
-    time-zone: Asia/Shanghai
+    time-zone: GMT+8
 
   redis:
     host: localhost
@@ -18,6 +18,9 @@ spring:
   session:
     store-type: redis
     timeout: 86400
+
+  jpa:
+    open-in-view: true
 
 
 logging:
